--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@clerk/clerk-expo": "^0.20.5",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
-    "@types/react": "~18.2.45",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
+    "firebase": "^10.8.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -25,7 +25,8 @@
     "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.56"
   },
   "private": true
 }
