--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.5",
+    "@expo/webpack-config": "~19.0.1",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
+    "formik": "^2.4.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.3.0"
   },
