--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "expo": "~50.0.7",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,8 +30,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.3.0",
-    "expo-image-picker": "~14.7.1"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
