--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.23",
     "expo": "~50.0.7",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
@@ -30,7 +31,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
