--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.3.0",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-gesture-handler": "~2.14.0",
+    "expo-sharing": "~11.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
